ForumNG: OUMobile Theme layout issues #303482

--- a/styles.css
+++ b/styles.css
@@ -374,7 +374,7 @@ h2.forumng-author {
 
 .forumng-pic {
     float:left;
-    width:35px;
+    width:55px;
 }
 .forumng-subject,
 .forumng-info,
